K8s/producer-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: producer
#   namespace: kafka
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: producer
#   template:
#     metadata:
#       labels:
#         app: producer
#     spec:
#       containers:
#       - name: producer
#         image: producer:latest
#         imagePullPolicy: IfNotPresent
#         env:
#         - name: KAFKA_BOOTSTRAP
#           value: "uni-it-cluster-kafka-bootstrap.kafka.svc.cluster.local:9093"
#         - name: SASL_USERNAME
#           valueFrom:
#             secretKeyRef:
#               name: producer-user
#               key: username
#         - name: SASL_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: producer-user
#               key: password
#         ports:
#         - containerPort: 5000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: producer-service
#   namespace: kafka
# spec:
#   selector:
#     app: producer
#   ports:
#   - protocol: TCP
#     port: 5000
#     targetPort: 5000
#   type: ClusterIP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - name: producer
        image: producer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: kafka-ca
          mountPath: /etc/ssl/certs/kafka
          readOnly: true
      volumes:
      - name: kafka-ca
        secret:
          secretName: kafka-ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  namespace: kafka
spec:
  selector:
    app: producer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30001
  type: NodePort
