K8s/producer-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  namespace: kafka
spec:
  selector:
    app: producer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30001   # puoi scegliere un numero tra 30000-32767
  type: NodePort
