K8s/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
spec:
  rules:
    - host: metrics.local
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: metrics-service
                port:
                  number: 5001
